--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aplayer": "^1.10.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
@@ -20,12 +21,17 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "mongoose-slug-updater": "^3.3.0",
+    "multer": "^2.0.2",
     "pug": "^3.0.3",
+    "streamifier": "^0.1.1",
     "unidecode-plus": "^1.0.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.1.0",
+    "@types/streamifier": "^0.1.2",
     "node-ts": "^8.0.11",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
