--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
 	"esModuleInterop": true,
 	"target": "ES6",
 	"module": "commonjs",
-	"outDir": "dist"
+	"outDir": "dist",
+	"lib": [
+            "es5", "es6", "dom", "dom.iterable"
+        ]
     }
 }
